--- a/.github/workflows/tagging.yml
+++ b/.github/workflows/tagging.yml
@@ -12,13 +12,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check Tag
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup Tag Match
         id: check-tag
         run: |
           if [[ ${{ github.event.head_commit.message }} =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
             echo ::set-output name=match::true
           fi
-      - name: Build
+      - name: Tag Match
         if: steps.check-tag.outputs.match == 'true'
         run: |
           echo "Tag is a match"
