--- a/.github/workflows/tagging.yml
+++ b/.github/workflows/tagging.yml
@@ -21,11 +21,19 @@ jobs:
           if [[ ${{ github.event.head_commit.message }} =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
             echo ::set-output name=match::true
           fi
+
       - name: Tag Match
         if: steps.check-tag.outputs.match == 'true'
         run: |
           echo "Tag is a match"
+
       - name: Tagging ${{ github.event.head_commit.message }}"
-        uses: EndBug/add-and-commit@v9
+        uses: actions/github-script@v6
         with:
-          tag: "${{ github.event.head_commit.message }}"
+          script: |
+            github.rest.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: "refs/tags/${{ github.event.head_commit.message }}",
+              sha: context.sha
+            })
