--- a/.github/workflows/tagging.yml
+++ b/.github/workflows/tagging.yml
@@ -1,4 +1,4 @@
-name: Tag release branch
+name: Tag version
 
 on:
   push:
@@ -7,7 +7,6 @@ on:
 
 jobs:
   tag_merged:
-    name: Tag version branch
     if: startsWith(github.event.head_commit.message, 'v')
     runs-on: ubuntu-latest
 
@@ -27,7 +26,7 @@ jobs:
         run: |
           echo "Tag is a match"
 
-      - name: Tagging ${{ github.event.head_commit.message }}"
+      - name: Tagging ${{ github.event.head_commit.message }}
         uses: actions/github-script@v6
         with:
           script: |
