--- a/.github/workflows/tagging.yml
+++ b/.github/workflows/tagging.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Tag Match
         id: check-tag
         run: |
-          if [[ ${{ "github.event.head_commit.message" }} =~ ^v[0-9]+\.[0-9]+\.[0-9]+ ]]; then
+          if [[ "${{ github.event.head_commit.message }}" =~ ^v[0-9]+\.[0-9]+\.[0-9]+ ]]; then
             echo ::set-output name=match::true
           fi
 
