--- a/.github/workflows/tagging.yml
+++ b/.github/workflows/tagging.yml
@@ -21,14 +21,21 @@ jobs:
             echo ::set-output name=match::true
           fi
 
-      - name: Tag Match
+      - name: Set Tag Value
         if: steps.check-tag.outputs.match == 'true'
+        id: tag
+        run: |
+          COMMIT_MSG=${{ github.event.head_commit.message }}
+          TAG=$(echo $COMMIT_MSG | sed 's/^v[0-9]+\.[0-9]+\.[0-9]+/$1/g')
+          echo "PARSED_TAG=$TAG" >> $GITHUB_ENV
+
+      - name: Tag
         uses: actions/github-script@v6
         with:
           script: |
             github.rest.git.createRef({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              ref: "refs/tags/${{ github.event.head_commit.message }}",
+              ref: "refs/tags/${{ env.PARSED_TAG }}",
               sha: context.sha
             })
