--- a/.github/workflows/tagging.yml
+++ b/.github/workflows/tagging.yml
@@ -25,7 +25,7 @@ jobs:
         if: steps.check-tag.outputs.match == 'true'
         id: tag
         run: |
-          COMMIT_MSG=${{ "github.event.head_commit.message" }}
+          COMMIT_MSG="${{ github.event.head_commit.message }}"
           TAG=$(echo $COMMIT_MSG | sed 's/^v[0-9]+\.[0-9]+\.[0-9]+/$1/g')
           echo "PARSED_TAG=$TAG" >> $GITHUB_ENV
 
