--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "json-rpc-engine": "6.1.0",
     "keccak": "^3.0.1",
     "preact": "^10.5.9",
+    "qs": "^6.10.3",
     "rxjs": "^6.6.3",
     "stream-browserify": "^3.0.0"
   },
@@ -57,6 +58,7 @@
     "@babel/core": "^7.0.0",
     "@types/bn.js": "^4.11.6",
     "@types/node": "^14.14.20",
+    "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/eslint-plugin-tslint": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
