--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "lint:prettier": "prettier --check \"{src,__tests__}/**/*.(js|ts|tsx)\"",
     "lint:eslint": "eslint ./src --ext .ts,.tsx",
     "fix:eslint": "yarn lint:eslint --fix",
-    "fix:prettier": "prettier . --write",
-    "pretest": "yarn lint:eslint && yarn lint:types && yarn lint:prettier"
+    "fix:prettier": "prettier . --write"
   },
   "private": true,
   "dependencies": {
@@ -88,6 +87,7 @@
     "svgo": "^2.8.0",
     "ts-jest": "^27.1.4",
     "ts-loader": "^8.0.13",
+    "ts-node": "^10.7.0",
     "tslib": "^2.0.3",
     "typescript": "^4.1.3",
     "watchify": "4.0.0",
