--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "devDependencies": {
     "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/bn.js": "^4.11.6",
     "@types/jest": "^27.4.1",
     "@types/node": "^14.14.20",
@@ -67,6 +68,7 @@
     "browserify": "17.0.0",
     "copy-webpack-plugin": "^6.4.1",
     "core-js": "^3.8.2",
+    "css-loader": "^6.7.1",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
@@ -75,15 +77,18 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "jasmine": "3.8.0",
     "jest": "^27.5.1",
+    "jest-chrome": "^0.7.2",
     "karma": "^6.3.15",
     "karma-browserify": "8.1.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-jasmine": "^4.0.1",
+    "mini-css-extract-plugin": "^2.6.0",
     "nodemon": "^2.0.6",
     "prettier": "^2.5.1",
     "raw-loader": "^4.0.2",
     "regenerator-runtime": "^0.13.7",
-    "sass": "^1.32.0",
+    "sass": "^1.50.0",
+    "sass-loader": "^12.6.0",
     "svgo": "^2.8.0",
     "ts-jest": "^27.1.4",
     "ts-loader": "^8.0.13",
@@ -91,7 +96,7 @@
     "tslib": "^2.0.3",
     "typescript": "^4.1.3",
     "watchify": "4.0.0",
-    "webpack": "^5.49.0",
+    "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "whatwg-fetch": "^3.5.0"
   },
