--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "author": "Coinbase, Inc.",
   "license": "Apache-2.0",
   "scripts": {
-    "test": "jest",
+    "test:unit": "jest",
+    "test:unit:coverage": "yarn test:unit && open coverage/lcov-report/index.html",
+    "test:karma": "yarn build-npm && karma start",
     "prebuild": "node -p \"'export const LIB_VERSION = ' + JSON.stringify(require('./package.json').version) + ';'\" > src/version.ts",
     "build": "node compile-assets.js && webpack --config webpack.config.js",
     "build-npm": "tsc -p ./tsconfig.build.json",
