--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "target": "es2016",
     "types": ["node", "jest"]
   },
-  "include": ["src", "src/@types", "__tests__", "tests"]
+  "include": ["src", "src/@types", "__tests__", "**/*.test.*"]
 }
