--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,5 +33,26 @@ jobs:
       - name: Check Types
         run: yarn lint:types
 
-      - name: Run Unit Tests
-        run: yarn test:unit
+  tests:
+    name: Tests
+    runs-on: ubuntu-latest
+
+    strategy:
+        matrix:
+          node-version: [12.x, 14.x, 16.x]
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'yarn'
+
+    - name: Install NPM dependencies
+      run: yarn install
+
+    - name: Run Unit Tests
+      run: yarn test:unit
