--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,9 @@
 name: CI
 
 on:
-  pull_request:
-    types: [review_requested]
+  push:
+    branches-ignore:
+      - "master"
 
 jobs:
   lint-check:
