--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -5,9 +5,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "isolatedModules": true,
-    "noEmit": true,
-    "outDir": "./build/npm/dist",
-    "target": "es2017"
+    "noEmit": true
   },
   "include": ["src", "src/@types"],
   "exclude": ["**/*.test.*", "__tests__"]
