--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,18 +38,13 @@ jobs:
     name: Tests
     runs-on: ubuntu-latest
 
-    strategy:
-        matrix:
-          node-version: [16.x]
-
     steps:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
         cache: 'yarn'
 
     - name: Install NPM dependencies
