--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,7 @@
 name: CI
 
 on:
-  push:
-    branches-ignore:
-      - master
+  push
 
 jobs:
   lint-check:
@@ -38,11 +36,15 @@ jobs:
     name: Tests
     runs-on: ubuntu-latest
 
+    strategy:
+        matrix:
+          node-version: [12.x, 14.x, 16.x]
+
     steps:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Use Node.js
+    - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         cache: 'yarn'
