--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -1,4 +1,4 @@
-name: Input version tag
+name: Version - PR
 
 on:
   workflow_dispatch:
@@ -29,10 +29,10 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Use Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version-file: ".nvmrc"
 
