--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,29 @@ name: CI
 on: [push, pull_request]
 
 jobs:
+  lint:
+    name: Lint Check
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Checkout node action
+        uses: actions/setup-node@v3
+        with:
+          node-version-file: '.nvmrc'
+          cache-dependency-path: 'yarn.lock'
+
+      - name: Install NPM dependencies
+        run: yarn install
+
+      - name: Check ESLint
+        run: yarn lint:eslint
+
   lint-check:
     name: Lint / Type Check
     runs-on: ubuntu-latest
@@ -22,9 +45,6 @@ jobs:
 
       - name: Install NPM dependencies
         run: yarn install
-
-      - name: Check ESLint
-        run: yarn lint:eslint
 
       - name: Runs compile asset script
         run: node ./compile-assets.js
